# ACORN

./: .gitignore  CMakeLists.txt  Explain.md  README.md  docker-compose.debug.yml  run_acorn.sh  run_acorn_amazon.sh  run_acorn_wiki.sh  run_acorn_wikinormalized.sh  run_acorn_yfcc.sh  run_all.sh  run_simple_test.sh
09-18-2024_sift1M/MB64/: summary_sift_n=10000_gamma=12.txt
09-19-2024_sift1M/MB64/: summary_sift_n=10000_gamma=12.txt  summary_sift_n=2000640_gamma=12.txt
09-20-2024_sift1M/MB64/: summary_sift_n=10000_gamma=12.txt
09-22-2024_/MB/: summary_sift_n=_gamma=.txt
09-26-2024_amazon/MB16/: summary_amazon_n=1000000_nq=5000_efs=150_gamma=12.txt  summary_amazon_n=1000000_nq=5000_efs=150_gamma=12_M_beta=16.txt
09-26-2024_amazon/MB32/: summary_amazon_n=1000000_nq=5000_efs=150_gamma=12.txt
09-26-2024_amazon/MB64/: summary_amazon_n=1000000_gamma=12.txt  summary_amazon_n=1000000_nq=100_gamma=12.txt  summary_amazon_n=1000000_nq=5000_efs=150_gamma=12.txt
09-26-2024_wikicohere/MB16_gamma1/: summary_wikicohere_n=1000000_nq=5000_efs=150_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=50_efs=0_gamma=1_M_beta=16.txt
09-26-2024_wikicohere/MB16_gamma10/: summary_wikicohere_n=1000000_nq=50_efs=0_gamma=10_M_beta=16.txt
09-26-2024_wikicohere/MB32_gamma1/: summary_wikicohere_n=1000000_nq=50_efs=0_gamma=1_M_beta=32.txt
09-26-2024_wikicohere/MB32_gamma10/: summary_wikicohere_n=1000000_nq=50_efs=0_gamma=10_M_beta=32.txt
09-26-2024_wikicohere/MB64_gamma1/: summary_wikicohere_n=1000000_nq=50_efs=0_gamma=1_M_beta=64.txt
09-26-2024_wikicohere/MB64_gamma10/: summary_wikicohere_n=1000000_nq=50_efs=0_gamma=10_M_beta=64.txt
09-27-2024_experiments/: summary_amazon.txt  summary_amazon_efc40.txt  summary_wikichohere.txt  summary_wikicohere.txt  summary_wikicohere_efc40.txt  summary_yfcc.txt
09-27-2024_experiments/MB16_gamma1/: summary_amazon_n=1000000_nq=10_efs=0_gamma=1_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=10_gamma=1_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=150_gamma=1_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=20_gamma=1_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=40_gamma=1_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=80_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=10_efs=0_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=10_efs=10_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=10_efs=20_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=10_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=150_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=20_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=40_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=80_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=50_efs=0_gamma=1_M_beta=16.txt  summary_wikicohere_n=1000000_nq=50_efs=10,20,40,80,150_gamma=1_M_beta=16.txt  summary_yfcc_n=1000000_nq=10_efs=0_gamma=1_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=10_gamma=1_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=150_gamma=1_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=20_gamma=1_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=40_gamma=1_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=80_gamma=1_M_beta=16.txt
09-27-2024_experiments/MB16_gamma10/: summary_amazon_n=1000000_nq=5000_efs=0_gamma=10_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=10_gamma=10_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=150_gamma=10_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=20_gamma=10_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=40_gamma=10_M_beta=16.txt  summary_amazon_n=1000000_nq=5000_efs=80_gamma=10_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=0_gamma=10_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=10_gamma=10_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=150_gamma=10_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=20_gamma=10_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=40_gamma=10_M_beta=16.txt  summary_wikicohere_n=1000000_nq=5000_efs=80_gamma=10_M_beta=16.txt  summary_wikicohere_n=1000000_nq=50_efs=0_gamma=10_M_beta=16.txt  summary_wikicohere_n=1000000_nq=50_efs=10,20,40,80,150_gamma=10_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=0_gamma=10_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=10_gamma=10_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=150_gamma=10_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=20_gamma=10_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=40_gamma=10_M_beta=16.txt  summary_yfcc_n=1000000_nq=5000_efs=80_gamma=10_M_beta=16.txt
09-27-2024_experiments/MB32_gamma1/: summary_amazon_n=1000000_nq=10_efs=0_gamma=1_M_beta=32.txt  summary_amazon_n=1000000_nq=5000_efs=0_gamma=1_M_beta=32.txt  summary_amazon_n=1000000_nq=5000_efs=10_gamma=1_M_beta=32.txt  summary_amazon_n=1000000_nq=5000_efs=150_gamma=1_M_beta=32.txt  summary_amazon_n=1000000_nq=5000_efs=20_gamma=1_M_beta=32.txt  summary_amazon_n=1000000_nq=5000_efs=40_gamma=1_M_beta=32.txt  summary_amazon_n=1000000_nq=5000_efs=80_gamma=1_M_beta=32.txt  summary_wikichohere_n=1000000_nq=5000_efs=80_gamma=1_M_beta=32.txt  (+16 more)
09-28-2024_experiments/: summary_wiki_normalized.txt  summary_wikicohere.txt  summary_yfcc.txt
demos/: CMakeLists.txt  MutiLabel.cpp  acorn.cpp  demo_ivfpq_indexing.cpp  demo_new_test.cpp  metadata.txt  test_acorn.cpp  utils.cpp
faiss/: CMakeLists.txt  Index.h  IndexACORN.cpp  IndexACORN.h  IndexHNSW.cpp  IndexHNSW.h
siftsmall/: query_attrs.txt  siftsmall_R20_L40_SR32_stitched_index  siftsmall_R20_L40_SR32_stitched_index_full  siftsmall_R20_L40_SR32_stitched_index_full_labels_to_medoids.txt  siftsmall_R20_L40_SR32_stitched_index_label_formatted.txt  siftsmall_R20_L40_SR32_stitched_index_labels.txt  siftsmall_R20_L40_SR32_stitched_index_labels_to_medoids.txt  siftsmall_R32_L50_filtered_index_labels_to_medoids.txt
testing_data/: base_attrs.txt  base_attrs_sift1m_nc=12_assignment=rand.json  query_filters_sift0m_nc=12_alpha=0.json  query_filters_sift2m_nc=12_alpha=0.json
(+119 files in other folders)
